Fix artist picture stretch

--- a/src/app/layouts/modal-container/modal-container.component.scss
+++ b/src/app/layouts/modal-container/modal-container.component.scss
@@ -12,6 +12,3 @@
 	padding-left: 15px;
 	padding-right: 15px;
 }
-:host {
-	// display: block;
-}
