--- a/src/app/pages/album/album.component.scss
+++ b/src/app/pages/album/album.component.scss
@@ -67,6 +67,7 @@
 			border-radius: 50%;
 			margin-right: 10px;
 			box-shadow: 0 2px 4px rgb(0 0 0 / 6%);
+			object-fit: cover;
 		}
 
 		&:hover {
