--- a/src/app/pages/artist/artist.component.scss
+++ b/src/app/pages/artist/artist.component.scss
@@ -31,6 +31,7 @@ h3 {
 	height: 250px;
 	margin: 20px;
 	border-radius: 50%;
+	object-fit: cover;
 	box-shadow: 0 2px 4px rgb(0 0 0 / 6%);
 }
 
